objects/committeemember__c.object
<CustomObject><fields>
        <fullName>committee__c</fullName>
        <label>Committee</label>
        <referenceTo>Committee__c</referenceTo>
        <relationshipLabel>Committee Members</relationshipLabel>
        <relationshipName>committeemembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Committee Memberships</relationshipLabel>
        <relationshipName>committeemembers</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>enddate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>organizationrepresenting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Representing</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Committee Representation</relationshipLabel>
        <relationshipName>committeemembers</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Chairperson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Treasurer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>startdate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>votingmember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voting Member</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Committee Member</label><nameField>
        <displayFormat>CM-{000000}</displayFormat>
        <label>Committee Member ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Committee Members</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>